--- a/Thato1StudyGroup/Views/Shared/_Layout.cshtml
+++ b/Thato1StudyGroup/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Study Group", "ViewStudy1", "GroupS", new { area = "" }, new { @class = "nav-link" })</li>
+               
                 </ul>
             </div>
         </div>
